@@ -5,13 +5,17 @@
     <parent>
         <artifactId>opengrok-top</artifactId>
         <groupId>org.opengrok</groupId>
-        <version>1.1-rc74</version>
+        <version>1.2.8</version>
     </parent>
 
     <artifactId>suggester</artifactId>
     <packaging>jar</packaging>
 
     <name>OpenGrok Suggester</name>
+
+    <properties>
+        <jdkArgs></jdkArgs>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -62,7 +66,7 @@
         <dependency>
             <groupId>net.openhft</groupId>
             <artifactId>chronicle-map</artifactId>
-            <version>3.15.1</version>
+            <version>3.17.0</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.sun.java</groupId>
@@ -93,12 +97,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>${surefireArgLine}</argLine>
+                    <argLine>
+                        -Djna.nosys=true
+                        @{surefireArgLine}
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
@@ -108,7 +114,7 @@
         <profile>
             <id>java9plus</id>
             <activation>
-                <jdk>[9,11]</jdk>
+                <jdk>[9,18]</jdk>
             </activation>
             <build>
                 <plugins>
@@ -117,6 +123,9 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <argLine>
+                                @{surefireArgLine}
+                                -Djna.nosys=true
+                                --illegal-access=permit
                                 --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
                                 --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
                                 --add-exports java.base/sun.nio.ch=ALL-UNNAMED
